--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
                     </div>
                 </div>
                 <div class="row justify-content-center fs-5">
-                    <div class="col-md-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio velit suscipit quos praesentium sapiente aspernatur eius molestias nostrum eos eveniet.</div>
                     <div class="col-md-4">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus incidunt repudiandae accusantium inventore vitae. Sed, exercitationem? Assumenda perspiciatis quibusdam
-                        iusto voluptates pariatur! Minus, aspernatur assumenda?
+                        Repositori Aplikasi yang berbasis multiplatform yang dikembangkan untuk memenuhi kebutuhan Sistem Informasi Manajemen pada Badan Layanan Umum Kantor Unit Penyelenggara Bandar
+                        Udara Juwata dengan tetap memperhatikan keamanan pengguna.
                     </div>
                 </div>
             </div>
@@ -186,9 +185,7 @@
                         <br />
                         Finance and Planning Division Juwata International Aiport
                     </div>
-                    <div class="col">
-                        <div class="text-center shadow" id="mapid"></div>
-                    </div>
+                    <div class="text-center shadow" id="mapid"></div>
                 </div>
             </div>
             <img class="wave" src="images/wavefooter.svg" alt="" />
