--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="images/kemenhubpng480p.png" alt="" width="30" height="24" class="d-inline-block align-text-top" />Juwata Apps</a>
+                <a class="navbar-brand" href="#"><img src="images/kemenhubpng480p.png" alt="" width="30" height="24" class="d-inline-block align-text-top" /></a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -62,14 +62,14 @@
         <section class="section-home text-center" id="home">
             <img src="images/kemenhubsvg480p.svg" width="100" alt="" />
             <h1 class="display-5"><strong>Juwata Airport Apps</strong></h1>
-            <p class="lead">Where innovation meets service excellence</p>
+            <p class="lead">where technology meets service excellence</p>
             <img class="wave" src="images/wavesection1.svg" alt="" />
         </section>
         <section class="section-about" id="about">
             <div class="container">
                 <div class="row mb-3 text-center">
                     <div class="col">
-                        <h2>About Juwata Apps</h2>
+                        <h2>Tentang Juwata Airport Apps</h2>
                     </div>
                 </div>
                 <div class="row justify-content-center fs-5">
